--- a/package.json
+++ b/package.json
@@ -8,50 +8,55 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "1.2.4",
+    "@fortawesome/free-solid-svg-icons": "*",
+    "@fortawesome/react-native-fontawesome": "*",
+    "@react-native-community/datetimepicker": "3.0.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.8.0",
+    "@react-navigation/drawer": "^5.9.0",
+    "@react-navigation/material-bottom-tabs": "^5.2.16",
+    "@react-navigation/material-top-tabs": "^5.2.16",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
     "expo": "~39.0.2",
+    "expo-constants": "~9.2.0",
+    "expo-linear-gradient": "~8.3.0",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-web": "~0.13.12",
-    "expo-constants": "~9.2.0",
     "react-hook-form": "^6.10.1",
-    "react-native-svg": "12.1.0",
-    "react-native-paper": "^4.0.1",
-    "react-native-swiper": "*",
-    "expo-linear-gradient": "~8.3.0",
-    "react-native-screens": "~2.10.1",
-    "react-native-elements": "*",
-    "react-native-tab-view": "^2.15.1",
-    "@react-navigation/stack": "^5.9.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-woodpicker": "*",
-    "@react-navigation/drawer": "^5.9.0",
-    "@react-navigation/native": "^5.7.3",
-    "react-native-phone-input": "*",
-    "react-native-vector-icons": "*",
-    "react-native-snap-carousel": "*",
-    "react-native-social-buttons": "^1.2.0",
-    "react-native-viewport-units": "*",
-    "react-native-gesture-handler": "~1.7.0",
-    "@react-navigation/bottom-tabs": "^5.8.0",
-    "react-native-intl-phone-input": "^1.2.26",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-circular-progress": "*",
+    "react-native-elements": "*",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-intl-phone-input": "^1.2.26",
+    "react-native-modal-datetime-picker": "*",
+    "react-native-paper": "^4.0.1",
+    "react-native-phone-input": "*",
+    "react-native-phone-number-input": "^1.1.0",
+    "react-native-reanimated": "~1.13.0",
     "react-native-responsive-screen": "*",
     "react-native-safe-area-context": "3.1.4",
-    "react-native-phone-number-input": "^1.1.0",
-    "@fortawesome/fontawesome-svg-core": "1.2.4",
-    "@fortawesome/free-solid-svg-icons": "*",
-    "react-native-modal-datetime-picker": "*",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/material-top-tabs": "^5.2.16",
-    "@fortawesome/react-native-fontawesome": "*",
-    "@twotalltotems/react-native-otp-input": "^1.3.11",
-    "@react-native-community/datetimepicker": "3.0.0",
-    "@react-navigation/material-bottom-tabs": "^5.2.16"
+    "react-native-screens": "~2.10.1",
+    "react-native-snap-carousel": "*",
+    "react-native-social-buttons": "^1.2.0",
+    "react-native-svg": "12.1.0",
+    "react-native-swiper": "*",
+    "react-native-tab-view": "^2.15.1",
+    "react-native-vector-icons": "*",
+    "react-native-viewport-units": "*",
+    "react-native-web": "~0.13.12",
+    "react-native-woodpicker": "*"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
   },
-  "private": true
+  "private": true,
+  "name": "saathealth_care4care_demo",
+  "version": "1.0.0",
+  "repository": "https://github.com/jaikumarkaushil/saathealth_care4care_demo.git",
+  "author": "jaikumarkaushil <jaikumarkaushil@gmail.com>",
+  "license": "MIT"
 }
